--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "reactdemo",
-  "version": "1.0.0",
-  "description": "this is react project",
-  "main": "index.js",
+  "name": "react_demo",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
+    "react-scripts": "1.1.5"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mistcloud/reactDemo.git"
-  },
-  "keywords": [
-    "react"
-  ],
-  "author": "daisuiyuan",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mistcloud/reactDemo/issues"
-  },
-  "homepage": "https://github.com/mistcloud/reactDemo#readme"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  }
 }
